fixed alignment of nav bar and side bar

--- a/style.css
+++ b/style.css
@@ -60,13 +60,12 @@
 }
 
 .left-vert-bar p{
-    margin:10px 0px 0px 5px;
+    margin:20px 0px 0px 5px;
 }
 
 #watch-a-video{
     width: 150px;
-    margin-bottom: 5px;
-    margin-left: 5px;
+    margin: 15px 0px 7px 5px;
     text-align: center;
     color:white;
     background-color: blue;
@@ -110,8 +109,8 @@
 
 .left-vert-bar .ninja-pic img{
     display: inline-block;
-    width: 90px;
-    margin:95px 10px 0px 30px;
+    width: 80px;
+    margin:100px 10px 0px 35px;
     position: absolute;
     left: 10px;
     z-index: 2;
@@ -125,7 +124,7 @@
     position: absolute;
     font-size: 14pt;
     text-align: center;
-    top: 370px;
+    top: 390px;
     left: 10px;
     z-index: 2;
     
@@ -140,7 +139,7 @@
     background-color: aqua;
     box-shadow: 0px 1px 1px 0px black;
     border-radius: 7px;
-    top: 555px;
+    top: 575px;
     left: 17px;
     z-index: 2;
     
@@ -169,6 +168,7 @@
 .contact-bar img{
     width: 30px;
     display: inline-block;
+    margin-left: 30px;
 }
 
 .contact-bar p{
@@ -211,12 +211,17 @@
 
 .clients-and-servers{
     display: inline-block;
-    list-style: none;
-    width: 700px;
+    width: 730px;
     position:absolute;
-    left: 200px;
+    left: 220px;
     top:210px;
 }
-.clients-and-servers h2{
+.clients-and-servers h2, p{
     margin-top:10px;
 }
+
+.clients-and-servers .list ul{
+    margin-left: 50px;
+}
+
+.server
